# MSUScripter

./: .gitignore  .gitmodules  LICENSE  MSUScripter.pupnet.conf  MSUScripter.sln  README.md  app.pupnet.conf
.github/workflows/: build.yml  dotnet.yml  linux.yml  linux_build.yml  windows.yml
Docs/: changelog.md  install.md
MSUScripter/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  BasicEventArgs.cs  DependencyObjectExtensions.cs  MSUScripter.csproj  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  PcmEventArgs.cs  PcmEventType.cs  Program.cs  SkipConvertAttribute.cs  SongFileEventArgs.cs  ViewLocator.cs  app.manifest  msu-randomizer-settings.yaml
MSUScripter/Assets/: app.metainfo.xml  msu-randomizer-settings.yaml  org.mattequalscoder.msuscripter.desktop  uninstall.sh
MSUScripter/Configs/: AudioMetadata.cs  DitherType.cs  MsuBasicInfo.cs  MsuPcmPlusPlusConfig.cs  MsuProject.cs  MsuSongInfo.cs  MsuSongMsuPcmInfo.cs  MsuTrackInfo.cs  RecentProject.cs  Settings.cs  TrackListType.cs
PyMsuScripterApp/: .gitignore  pyproject.toml
PyMsuScripterApp/py_msu_scripter_app/: __main__.py  py_music_looper_runner.py  sample_rate_analyzer.py  version.py  video_creator.py
PyMsuScripterApp/test_files/: create_video.yml  py_music_looper.yml  samples.yml
SchemaGenerator/: Program.cs  SchemaGenerator.csproj
Schemas/: MsuSongInfo.json  MsuSongMsuPcmInfo.json
Setup/: AppImage.pupnet.conf  CodeDependencies.iss  LinuxBuildZipper.ps1  MSUScripter.iss  MSUScripter.pupnet.conf  app.metainfo.xml  create_setup.ps1  msuscripter.desktop
docs/: install.md
(+285 files in other folders)
